# coverage-test

./: .coveragerc  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: test-coverage.yml
coverage_study/: __init__.py  carro.py  exceptions.py  main.py  moto.py
tests/: test_carro.py  test_main.py  test_moto.py
