[tool.poetry]
name = "coverage-study"
version = "0.1.0"
description = ""
authors = ["Gustavo Soares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
ipdb = "^0.13.9"
coverage-badge = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
